# x2gbfs

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-publish.yml  lint-and-test.yml  lint.yml
config/: alpsgo.json  cambio_aachen.json  conficars_ulm.json  coono.json  deer.json  einfach_unterwegs.json  flinkster.json  flinkster_carsharing.json  ford_carsharing_autohausbaur.json  ford_carsharing_autohauskauderer.json  free2move_stuttgart.json  gmuend_bewegt.json  gruene-flotte_freiburg.json  gruene_flotte_freiburg.json  herrenberg_alf.json  herrenberg_fare.json  herrenberg_guelf.json  herrenberg_stadtrad.json  hertlein_carsharing.json  lara_to_go.json  lastenvelo_fr.json  mikar.json  my-e-car.json  naturenergie_sharing.json  noi.json  oberschwabenmobil.json  oekostadt_renningen.json  opendatahub.json  seefahrer_ecarsharing.json  stadtmobil_karlsruhe.json  stadtmobil_rhein-neckar.json  stadtmobil_stuttgart.json  stadtmobil_suedbaden.json  stadtwerk_tauberfranken.json  stadtwerke_wertheim.json  swu2go.json  teilauto_biberach.json  teilauto_neckar-alb.json  teilauto_schwaebisch_hall.json  voi-raumobil.json  (+1 more)
docs/mappings/: cambio_gbfs_2.3_mapping.md  deer_gbfs_2.3_mapping.md  fleetster_gbfs_2.3_mapping.md  flinkster_gbfs_2.3_mapping.md  free2move_gbfs_2.3_mapping.md  gbfs_2.3_mapping_template.md  gbfslight_gbfs_2.3_mapping.md  ixsi_gbfs_2.3_mapping.md  lastenvelo_fr_gbfs_2.3_mapping.md  moqo_gbfs_2.3_mapping.md
tests/data/: deer_locations.json  deer_vehicles.json  lastenvelo_fr.html  voi_raumobil_vehicles.json
x2gbfs/: util.py  x2gbfs.py
x2gbfs/gbfs/: __init__.py  base_provider.py  gbfs_transformer.py  gbfs_writer.py
x2gbfs/providers/: __init__.py  cambio.py  cantamen.py  deer.py  example.py  fleetster.py  flinkster.py  free2move.py  gbfslight.py  lastenvelo_fr.py  mikar.py  moqo.py  moqo_einfach_unterwegs.py  moqo_laratogo.py  noi.py  (+2 more)
(+4 files in other folders)
