[tool.setuptools]
packages = ["x2gbfs"]

[project]
name = "x2gbfs"
version = "0.0.1"
dependencies = [
    "requests~=2.32.3",
    "python-decouple~=3.8",
    "websockets~=15.0",
    "xmltodict~=0.14",
    "unidecode~=1.3",
]

[project.optional-dependencies]
testing = [
    "ruff~=0.11.6",
    "mypy~=1.17.0",
    "black~=25.1.0",
    "types-requests==2.32.0.20250328",
    "types-urllib3==1.26.25.14",
    "types-xmltodict==0.14.0.20241009",
]

[tool.black]
line-length = 120
skip-string-normalization = 1

[tool.ruff]
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "Q", # pydocstyle
    "T", # mypy
    "R", # pylint
    "S", # flake8
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]

lint.ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "F401", # imported but unused
    "S101", # use of assert detected
]

lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"

[[tool.mypy.overrides]]
# See https://github.com/HBNetwork/python-decouple/issues/122
module = "decouple"
ignore_missing_imports = true
